# docapi

./: .env.example  .gitignore  LICENSE  README.md  SPEC.md  conftest.py  pyproject.toml
evals/: README.md  generate_fixtures.py
evals/cases/: acme_invoice.json  euro_invoice.json  nptel_receipt.json  resume.json
scripts/: demo.py  eval.py  sample_invoice.py  try_extract.py
src/docapi/: __init__.py  config.py  eval_scoring.py  main.py  mcp_server.py
src/docapi/api/: extract.py
src/docapi/core/: chunking.py  dates.py  errors.py  extractors.py  grounding.py  ingest.py  pipeline.py  schema.py  understand.py  validate.py
src/docapi/core/providers/: anthropic.py  ollama.py
tests/: test_anthropic_provider.py  test_api.py  test_chunking.py  test_dates.py  test_eval_scoring.py  test_grounding.py  test_mcp.py  test_ollama_provider.py  test_pipeline.py  test_schema.py
web/: SUPABASE_SETUP.md  next.config.ts  package-lock.json  package.json
web/app/: globals.css  landing.css  layout.tsx  page.tsx
web/components/landing/: CodeTabs.tsx  Demo.tsx  EmailForm.tsx  RevealInit.tsx  Roadmap.tsx  SiteBackground.tsx
web/components/ui/: radial-orbital-timeline.tsx
web/lib/: highlight.ts  landingData.ts  supabase.ts
