[project]
name = "docapi"
version = "0.1.0"
description = "Document API for AI agents — extract-to-schema (v1 slice)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "pdfplumber>=0.11",
    "pypdf>=4.2",
    "httpx>=0.27",
    "mcp>=1.2",
]

[project.scripts]
docapi-mcp = "docapi.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "reportlab>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docapi"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
